# Safety_Fence_Project

./: .gitignore  README.md
Safety_Fence_ws/run/: 00_reset.sh  01_simulation.sh  02_bridge.sh  03_detector.sh  04_autonomous.sh  04_pose_test.sh  04_red_automation.sh  04_red_contact_test.sh  04_red_ik_approach.sh  04_robot_test.sh  05_green_automation.sh  06_blue_automation.sh  README.txt  _common.sh  wait_for_ros_endpoint.py
Safety_Fence_ws/src/sorting_cell_behavior/: package.xml  setup.cfg  setup.py
Safety_Fence_ws/src/sorting_cell_bringup/: CMakeLists.txt  package.xml
Safety_Fence_ws/src/sorting_cell_bringup/launch/: stage1.launch.py
Safety_Fence_ws/src/sorting_cell_control/: README_NEW_MOTION.txt
Safety_Fence_ws/src/sorting_cell_control/config/: blue_automation_path.json  green_automation_path.json  home_pose.json  red_automation_path.json  red_pickup_contact_ik.json  test_pose.json
Safety_Fence_ws/src/sorting_cell_control/scripts/: blue_automation.py  blue_automation_runtime.py  green_automation.py  move_to_pose.py  (+5 more)
Safety_Fence_ws/src/sorting_cell_description/: CMakeLists.txt  package.xml
Safety_Fence_ws/src/sorting_cell_description/urdf/: sorting_cell_ur.urdf.xacro
Safety_Fence_ws/src/sorting_cell_gazebo/: CMakeLists.txt  package.xml
Safety_Fence_ws/src/sorting_cell_gazebo/models/camera_frame/: model.sdf
Safety_Fence_ws/src/sorting_cell_gazebo/models/conveyor/: model.config  model.sdf
Safety_Fence_ws/src/sorting_cell_gazebo/models/emergency_stop/: model.config  model.sdf
Safety_Fence_ws/src/sorting_cell_gazebo/models/floor_markings/: model.config  model.sdf
Safety_Fence_ws/src/sorting_cell_gazebo/models/safety_fence/: model.config  model.sdf
Safety_Fence_ws/src/sorting_cell_gazebo/models/safety_gate/: model.config  model.sdf
Safety_Fence_ws/src/sorting_cell_gazebo/models/sorting_bins/: model.config  model.sdf
Safety_Fence_ws/src/sorting_cell_gazebo/models/stack_light/: model.config  model.sdf
Safety_Fence_ws/src/sorting_cell_gazebo/models/work_table/: model.config  model.sdf
Safety_Fence_ws/src/sorting_cell_gazebo/worlds/: sorting_cell_world.sdf  stage1_world.sdf
Safety_Fence_ws/src/sorting_cell_perception/: setup.cfg  setup.py
Safety_Fence_ws/src/sorting_cell_tools/: package.xml  setup.cfg  setup.py
coordinate_perception_snapshot/Safety_Fence_ws/src/sorting_cell_perception/: package.xml
coordinate_perception_snapshot/Safety_Fence_ws/src/sorting_cell_perception/sorting_cell_perception/: color_sort_detector.py
(+33 files in other folders)
