<?xml version="1.0"?>

<package format="3">

  <name>sorting_cell_description</name>

  <version>0.1.0</version>

  <description>
    Universal Robots integration for the autonomous sorting cell.
  </description>

  <maintainer email="osama@example.com">
    Osama
  </maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>
    ament_cmake
  </buildtool_depend>

  <depend>
    xacro
  </depend>

  <exec_depend>
    ur_description
  </exec_depend>

  <exec_depend>
    ur_simulation_gz
  </exec_depend>

  <exec_depend>
    robot_state_publisher
  </exec_depend>

  <test_depend>
    ament_lint_auto
  </test_depend>

  <test_depend>
    ament_lint_common
  </test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
