<?xml version="1.0"?>

<package format="3">

  <name>sorting_cell_gazebo</name>

  <version>0.1.0</version>

  <description>
    Gazebo worlds and simulation models for the safe autonomous sorting cell.
  </description>

  <maintainer email="osama@example.com">
    Osama
  </maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>
    ament_cmake
  </buildtool_depend>

  <depend>
    ros_gz_sim
  </depend>

  <exec_depend>
    ament_index_python
  </exec_depend>

  <exec_depend>
    launch
  </exec_depend>

  <exec_depend>
    launch_ros
  </exec_depend>

  <test_depend>
    ament_lint_auto
  </test_depend>

  <test_depend>
    ament_lint_common
  </test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
