<?xml version="1.0"?>

<package format="3">

  <name>sorting_cell_perception</name>
  <version>0.1.0</version>

  <description>
    RGB perception for the autonomous sorting cell.
  </description>

  <maintainer email="osama@example.com">
    osama
  </maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
